Fix a gap bug in adaptive.

--- a/basics.scss
+++ b/basics.scss
@@ -1835,6 +1835,7 @@ text-align: left;
 
     .categories {
         padding-top: 0;
+        gap: 15px;
     }
 
     .categories h1 {
